--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
+            ><img id='logo' src="./assets/icons/icon_96x96.png"
           /></div>
     </nav>
 
