--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav id="navbar">
       <div class="nav-btn">
-        <a class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</a>
+        <button type="submit" class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</button>
       </div>
      <h1> Just Another Text Editor</h1>
      
